# json-log-formatter

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  README.rst  mypy.ini  pyproject.toml  requirements.txt  setup.py  tests.py  tox.ini
.github/workflows/: ci.yml
json_log_formatter/: __init__.py
